# chess-rs

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  docs.yml  release-pypi.yml
assets/ml/: chess_refiner_v2.onnx  chess_refiner_v2.onnx.data
book/: book.toml
book/src/: SUMMARY.md  part-01-orientation.md  part-02-using-the-detector.md  part-03-core-chess-internals.md  part-04-multiscale-and-pyramids.md  part-05-performance-and-integration.md  part-06-extensions-and-future-work.md  perf.txt
book/src/img/: ml_summary.json
config/: chess_cli_config.example.json  chess_cli_config_example.json  chess_cli_config_example_ml.json
crates/chess/: Cargo.toml
crates/chess-cli/: Cargo.toml
crates/chess-cli/src/: main.rs
crates/chess-core/: Cargo.toml
crates/chess-core/src/: detect.rs  lib.rs  response.rs  ring.rs
crates/chess-core/tests/: responce_golden.rs
crates/chess-corners/: Cargo.toml  README.md
crates/chess-corners-core/: Cargo.toml  README.md
crates/chess-corners-core/src/: descriptor.rs  detect.rs  lib.rs  refine.rs  response.rs
crates/chess-corners-ml/assets/ml/fixtures/v2/: patches.npy  torch_out.npy
crates/chess-corners-py/: Cargo.toml  README.md  pyproject.toml
crates/chess-corners-py/python_tests/: test_basic.py
crates/chess-corners-py/src/: lib.rs
crates/chess-corners/examples/: multiscale_image.rs  single_scale_image.rs
crates/chess-corners/src/: image.rs  lib.rs  ml_refiner.rs  multiscale.rs  pyramid.rs
crates/chess/examples/: dump_corners.rs  dump_corners_multiscale.rs  multiscale_config.example.json
crates/chess/src/: app.rs  image.rs  lib.rs  logger.rs  multiscale.rs  pyramid.rs
crates/chess/tests/: api.rs
tools/: README.md  accuracy_bench.py  analyze_trace.py  chessbind.py  crop.py  detect.py  gen_golden.rs  perf_bench.py  plot_corners.py  plot_detectors.py  plot_output.py  synthimages.py  torchtest.py
tools/accuracy/: accuracy_utils.py
tools/detection/: chess.py  chessboard.py  chesscorner.py  harris.py
tools/gen-golden/: Cargo.toml
tools/gen-golden/src/: main.rs
tools/ml_refiner/: README.md  dataset.py  eval.py  export_onnx.py  model.py  requirements.txt  train.py
tools/ml_refiner/configs/: compare_opencv_v1.yaml  synth_v1.yaml  synth_v2.yaml  train_v1.yaml  train_v2.yaml
tools/ml_refiner/eval/: compare_opencv.py  metrics.py  visualize.py
tools/ml_refiner/synth/: __init__.py  augment.py  generate_dataset.py  homography.py  io.py  negatives.py  render_corner.py
tools/ml_refiner/tests/: test_onnx_parity.py
tools/plotting/: chess_plot.py
tools/trace/: io.py  parser.py  runner.py  traceplot.py
