[package]
name = "chess-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
chess = { path = "../chess", version = "0.1.0", features = ["tracing"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[features]
default = []
simd = ["chess/simd"]
rayon = ["chess/rayon"]
