[package]
name = "chess-core"
version = "0.1.0"
description = "Core ChESS (Chess-board Extraction by Subtraction and Summation) response + corner candidates"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
rayon = ["dep:rayon"]
simd = []
# preblur = []
# orientation = []
# pyramid = []

[dependencies]
rayon = { version = "1.10", optional=true}

[dev-dependencies]
image = "0.25"
