[package]
name = "chess-corners-core"
version = "0.1.0"
description = "Core ChESS (Chess-board Extraction by Subtraction and Summation) response + corner candidates"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
name = "chess_corners_core"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
rayon = ["dep:rayon"]
simd = []
tracing = ["dep:tracing"]

[dependencies]
rayon = { version = "1.10", optional=true }
tracing = { version = "0.1", optional=true }
log = "0.4"

[dev-dependencies]
image = "0.25"
