[package]
name = "chess-corners"
version = "0.1.0"
description = "Ergonomic ChESS detector crate"
edition.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[features]
default = []
rayon = ["chess-corners-core/rayon", "dep:rayon"]  # enable core’s rayon via this feature
simd = ["chess-corners-core/simd"]
tracing = ["chess-corners-core/tracing", "dep:tracing"]

[[bin]]
name = "chess-corners"
path = "bin/main.rs"

[dependencies]
chess-corners-core = { path = "../chess-corners-core", version = "0.1.0" }
image = "0.25"
log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rayon = { version = "1.10", optional = true }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
