[package]
name = "chess"
version = "0.1.0"
description = "Ergonomic ChESS detector crate"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
rayon = ["chess-core/rayon", "dep:rayon"]  # enable core’s rayon via this feature
simd = ["chess-core/simd"]

[dependencies]
chess-core = { path = "../chess-core", version = "0.1.0" }
image = "0.25"
log = "0.4"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
